# norns-hello-agent

./: .gitignore  README.md  pyproject.toml
docs/: release-v0.1-checklist.md
hello/: client.py  worker.py
